# rag-server

./: README.md  pyproject.toml
app/: config.py  server.py
app/services/: rag_service.py
app/static/: index.html
