[tool.poetry]
name = "my-lang-server"
version = "0.1.0"
description = "Enterprise RAG API with file upload support"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.10.12"
fastapi = "^0.115.9"
uvicorn = "^0.34.2"
python-multipart = "^0.0.6"
pydantic-settings = "^2.9.1"
langchain = "^0.3.25"
langchain-core = "^0.3.60"
langchain-community = "^0.3.24"
langchain-deepseek = "^0.1.3"
langchain-chroma = "^0.2.4"
langchain-text-splitters = "^0.3.8"
langchain-huggingface = "^0.2.0"
chromadb = "^1.0.10"
python-docx = "^1.1.0"
docx2txt = "^0.8"
"pdfminer.six" = "^20231228"
unstructured = "^0.12.4"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
